[package]
name = "pseudo_encrypt"
version = "0.1.2"
authors = ["lloydmeta <lloydmeta@gmail.com>"]
edition = "2018"
description = "Provides a native-Rust generic implementation of Psql's pseudo_encrypt"
license = "MIT"
documentation = "https://docs.rs/pseudo_encrypt"
repository = "https://github.com/lloydmeta/pseudo_encrypt-rs"
keywords = ["pseudo_encrypt", "Psql", "postgresql", "encrypt"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
proptest = "0.10"
